# regrid-wrapper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Base  Dockerfile-ESMF  Dockerfile-Python  Dockerfile-Spack-Stack  Dockerfile-Spack-Stack-RW  README.GOES  README.md  environment-dev-nc4-serial.yaml  environment-dev-no-esmpy.yaml  environment-dev.yaml  environment-prod.yaml  environment-uxarray.yaml  pyproject.toml
.github/workflows/: ci-env.sh  ci-lint.sh  ci-setup.sh  ci-test.sh  ci.yml
docker/: Dockerfile  Dockerfile-Spack  Dockerfile-Spack-CI  docker-build.sh  docker-push.sh  docker-test.sh  spack.yaml  test-in-spack-ci.sh
platform/ursa/: run-tests.sh
platform/ursa/modulefiles/: regrid-wrapper-prod.lua  regrid-wrapper-spack-stack.gaeac6.lua  regrid-wrapper-spack-stack.lua  regrid-wrapper-spack-stack.ursa.lua
script/: run-local-tests.sh  run-tests.sh  test_field_wrapper.py
script/derecho/: job-test_mpirun.sh  test_mpirun.py
script/gaea-c6/: job-test_mpirun.sh
script/mpas/: job-regrid.sh  regrid.py  regrid_grapes_to_mpas.py  regrid_rave_to_mpas.py
script/mpas-to-ugrid/: environment.yml  mpas_to_ugrid.py
script/package-specific/: install-netcdf4-python.sh  test-esmpy.sh  test-pytest.sh  test_mpi4py.py
script/rrfs-workflow/: exrrfs_regrid_chem.py
script/rrfs-workflow/chem_regrid_impl/: chem_regrid.py
script/run-platform-tests/: README.md  env-run-platform-tests.sh  run-platform-tests.sh
script/spack-stack/: env.sh  install.sh
src/regrid_wrapper/: describe.py
src/regrid_wrapper/app/: chem_regrid.py  override.py  (+3 more)
src/test/: conftest.py  test_describe.py  test_netcdf4.py
(+32 files in other folders)
